# mr-radio-localization

./: LICENSE  README.md  debug_plotting.py  plot_data.py  plot_ranges.py  simulator_launcher.sh
bags/: README.md
px4_sim_offboard/: CMakeLists.txt  package.xml
px4_sim_offboard/config/: agv_offboard_params.yaml  uav_offboard_params.yaml
px4_sim_offboard/launch/: offboard_launch.py
px4_sim_offboard/src/: agv_offboard_control.cpp  uav_offboard_control.cpp
px4_sim_offboard/trajectories_positions/: trajectory_lemniscate_agv.csv  trajectory_lemniscate_uav.csv  trajectory_mission_1_agv.csv  trajectory_mission_1_uav.csv  trajectory_mission_2_agv.csv  trajectory_mission_2_uav.csv  trajectory_random_1_agv.csv  trajectory_random_1_uav.csv
trajectories/: trajectory_circles.npy  trajectory_lemniscate.npy  trajectory_mission_1.npy  trajectory_random_1.npy  trajectory_random_2.npy
utils/: analyze_uwb.py  compare_metrics.py  plot_data.py
uwb_gz_simulation/: CMakeLists.txt  uwb_bridge.yaml
uwb_gz_simulation/include/: UWBGazeboPlugin.hpp
uwb_gz_simulation/models/r1_rover/: model.sdf
uwb_gz_simulation/models/x500_base/: model.sdf
uwb_gz_simulation/src/: UWBGazeboPlugin.cpp
uwb_gz_simulation/uwb_gazebo_plugin/: CMakeLists.txt  UWBGazeboSystem.cpp  UWBGazeboSystem.hpp
uwb_localization/: CMakeLists.txt  package.xml
uwb_localization/config/: params.yaml
uwb_localization/include/uwb_localization/: CostFunctions.hpp  algebraic_initialization.h  manifolds.hpp  poseOptimization.hpp  posegraph.hpp  residuals.hpp  utils.hpp
uwb_localization/launch/: localization.launch.py  localization_dataset.launch.py  localization_sim.launch.py  localization_sim_basic.launch.py
uwb_localization/msg/: PoseWithCovarianceStampedArray.msg
uwb_localization/rviz/: visualization.rviz
uwb_localization/src/: PCLVisualizer.cpp  agv_odometry_node.cpp  batchopt_node_eliko.cpp  batchopt_node_fusion.cpp  global_opt_node_eliko.cpp  optimizer_node.cpp  optimizer_node_eliko.cpp  optimizer_node_fusion.cpp  optimizer_sample_debug.cpp  poseOptimization.cpp  pose_optimization_node.cpp  uav_odometry_node.cpp
uwb_localization/srv/: UpdatePointClouds.srv
uwb_simulator/: package.xml  setup.cfg  setup.py
uwb_simulator/config/: params.yaml
uwb_simulator/launch/: odometry_simulator_launch.py  uwb_simulator_eliko_launch.py  uwb_simulator_launch.py  uwbodom_simulator_eliko_launch.py
uwb_simulator/uwb_simulator/: clock_publisher.py  measurement_simulator.py  measurement_simulator_eliko.py  odometry_simulator.py  trajectory_simulator.py
